fix: Corregir error CORS en autenticación y agregar despliegue Azure
Cambios principales:
- Eliminada anotación @CrossOrigin conflictiva en AuthController
- Configuración CORS centralizada en SecurityConfig y WebConfig
- Agregados scripts de despliegue automatizado para Azure
- Documentación completa del despliegue en Azure
- Actualizado .gitignore para excluir credenciales sensibles

Detalles técnicos:
- El error CORS se debía a conflicto entre @CrossOrigin(origins="*")
  y allowCredentials=true
- Solución: usar allowedOriginPatterns en vez de allowedOrigins
- Backend desplegado en Azure Container Apps con nueva imagen corregida
- Endpoint correcto: /api/v1/auth/login

Archivos de documentación Azure agregados:
- REGISTRO_DESPLIEGUE_AZURE.md: registro completo del proceso
- AZURE_QUICK_START.md: guía rápida de despliegue
- GUIA_DESPLIEGUE_AZURE.md: guía detallada
- deploy-azure.sh: script automatizado de despliegue

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ $RECYCLE.BIN/
 # Archivos temporales de documentación
 PRUEBA_*.md
 TEMP_*.md
+backend/wallet/
+Wallet_*/
+*.zip
+azure-config.env
