--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -29,15 +29,16 @@ server {
 
     # API proxy (si se necesita)
     location /api/ {
-        proxy_pass http://backend:8080/api/;
+        proxy_pass https://vitalwatch-backend.graycoast-fc35a2d0.southcentralus.azurecontainerapps.io/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_set_header Host vitalwatch-backend.graycoast-fc35a2d0.southcentralus.azurecontainerapps.io;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_server_name on;
     }
 
     # Health check endpoint
